Fix bug disable reponsive cause menu break on small screen

--- a/source/plg_system_t3/base/less/t3-responsive.less
+++ b/source/plg_system_t3/base/less/t3-responsive.less
@@ -68,4 +68,13 @@
       bottom: 0;
     }
   }
+  
+  .logo-control {
+    .logo-img-sm {
+      display: block;
+    }
+    .logo-img {
+      display: none;
+    }
+  }
 }
